file(GLOB_RECURSE HEADER_FILES "./src/*.h" "../GeomUtils/headers/*.h")
file(GLOB_RECURSE SOURCE_FILES "./src/*.c" "./src/*.cpp" "../GeomUtils/src/*.cpp")

#add_compile_definitions (PX_PHYSX_CORE_EXPORTS)
add_compile_definitions (DELAYIMP_INSECURE_WRITABLE_HOOKS)

include_directories( ../../Include/foundation )
include_directories( ../foundation/include )
include_directories( ../../Include/physxprofilesdk )
include_directories( ../../Include/physxvisualdebuggersdk )
include_directories( ../../Include/common )
include_directories( ../../Include/geometry )
include_directories( ../../Include/pvd )
include_directories( ../../Include/cooking )
include_directories( ../../Include/extensions )
include_directories( ../../Include/vehicle )
include_directories( ../../Include/pxtask )
include_directories( ../../Include/cloth )
include_directories( ../../Include )
include_directories( ../Common/src )
include_directories( ../GeomUtils/headers )
include_directories( ../GeomUtils/src/contact )
include_directories( ../GeomUtils/src/common )
include_directories( ../GeomUtils/src/convex )
include_directories( ../GeomUtils/src/distance )
include_directories( ../GeomUtils/src/gjk )
include_directories( ../GeomUtils/src/intersection )
include_directories( ../GeomUtils/src/mesh )
include_directories( ../GeomUtils/src/hf )
include_directories( ../GeomUtils/src/pcm )
include_directories( ../PhysXMetaData/core/include )
include_directories( ../PhysXMetaData/extensions/include )
include_directories( ../PhysXProfileSDK )
include_directories( ../PhysXExtensions/src )
include_directories( ../PhysXExtensions/src/serialization/Xml )
include_directories( ../PhysXExtensions/src/serialization/Binary )
include_directories( ../PvdRuntime/src )
include_directories( ../PhysXVisualDebuggerSDK )

include_directories( ../../externals/nvToolsExt/1/include )
include_directories( ../../externals/nvToolsExt/1/include/stdint )
include_directories( ../../Include/foundation )
include_directories( ../foundation/include )
include_directories( ../../Include/physxprofilesdk )
include_directories( ../../Include/physxvisualdebuggersdk )
include_directories( ../../Include/common )
include_directories( ../../Include )
include_directories( ../Common/src )
include_directories( ../Common/src/windows )
include_directories( ../PhysXProfile/include )
include_directories( ../PhysXProfile/src )
include_directories( ../../Include/geometry )
include_directories( ../GeomUtils/headers )
include_directories( ../GeomUtils/src )
include_directories( ../GeomUtils/src/contact )
include_directories( ../GeomUtils/src/common )
include_directories( ../GeomUtils/src/convex )
include_directories( ../GeomUtils/src/distance )
include_directories( ../GeomUtils/src/sweep )
include_directories( ../GeomUtils/src/gjk )
include_directories( ../GeomUtils/src/intersection )
include_directories( ../GeomUtils/src/mesh )
include_directories( ../GeomUtils/src/hf )
include_directories( ../GeomUtils/src/pcm )

add_library(PhysX3Common ${HEADER_FILES} ${SOURCE_FILES})