file(GLOB_RECURSE HEADER_FILES "./API/*.h" "./common/*.h" "./software/*.h")
file(GLOB_RECURSE SOURCE_FILES "./API/*.c" "./API/*.cpp" "./common/*.cpp" "./software/*.cpp")

#add_compile_definitions (PX_PHYSX_CORE_EXPORTS)
add_compile_definitions (DELAYIMP_INSECURE_WRITABLE_HOOKS)

# Set the BOOST_INSTALL_LAYOUT
set(BOOST_INSTALL_LAYOUT "SYSTEM" CACHE STRING "Boost install layout")

#include_directories( ../../externals/nvToolsExt/1/include )
#include_directories( ../../externals/nvToolsExt/1/include/stdint )
include_directories( ../../Include/foundation )
include_directories( ../foundation/include )
include_directories( ../../Include/physxprofilesdk )
include_directories( ../../Include/physxvisualdebuggersdk )
include_directories( ../../Include/common )
include_directories( ../../Include/geometry )
include_directories( ../../Include/pxtask )
include_directories( ../../Include )
include_directories( ../Common/src )
include_directories( ../Common/src/windows )
include_directories( ../PhysXProfile/src )
include_directories( ../PhysXProfile/include )
include_directories( ../GeomUtils/headers )
include_directories( ../GeomUtils/src/contact )
include_directories( ../GeomUtils/src/common )
include_directories( ../GeomUtils/src/convex )
include_directories( ../GeomUtils/src/distance )
include_directories( ../GeomUtils/src/gjk )
include_directories( ../GeomUtils/src/intersection )
include_directories( ../GeomUtils/src/mesh )
include_directories( ../GeomUtils/src/hf )
include_directories( ../GeomUtils/src/pcm )
include_directories( ../GeomUtils/src )
include_directories( ../LowLevel/API/include )
include_directories( ../LowLevel/common/include )
include_directories( ../LowLevel/common/include/collision )
include_directories( ../LowLevel/common/include/pipeline )
include_directories( ../LowLevel/common/include/pipeline/windows )
include_directories( ../LowLevel/common/include/math )
include_directories( ../LowLevel/common/include/utils )
include_directories( ../LowLevel/software/include )
include_directories( ../LowLevel/software/include/windows )

add_library(PhysX3LowLevel ${HEADER_FILES} ${SOURCE_FILES})