file(GLOB_RECURSE HEADER_FILES "./*.h")
file(GLOB SOURCE_FILES "./*.c" "./src/*.cpp" "./src/avx/*.cpp")

#add_compile_definitions (PX_PHYSX_CORE_EXPORTS)
add_compile_definitions (DELAYIMP_INSECURE_WRITABLE_HOOKS)

# Set the BOOST_INSTALL_LAYOUT
set(BOOST_INSTALL_LAYOUT "SYSTEM" CACHE STRING "Boost install layout")

include_directories( src )
include_directories( src/buffering )
include_directories( src/cloth )
include_directories( src/device )
include_directories( src/gpu )
include_directories( src/particles )



include_directories( src/windows )
include_directories( ../GeomUtils/src/mesh )
include_directories( ../LowLevel/API/include )
include_directories( ../SceneQuery )
include_directories( ../Common/src )
include_directories( ../foundation/include )
include_directories( ../PhysXGpu/include )
include_directories( ../SimulationController/include )
include_directories( ../../Include )
include_directories( ../../Include/common )
include_directories( ../../Include/foundation )
include_directories( ../../Include/geometry )
include_directories( ../../Include/gpu )
include_directories( ../../Include/pxtask )
include_directories( ../../Include/physxprofilesdk )
include_directories( ../../Include/physxvisualdebuggersdk )

include_directories( ../../Include/foundation )
include_directories( ../foundation/include )
include_directories( ../../Include/physxprofilesdk )
include_directories( ../../Include/physxvisualdebuggersdk )
include_directories( ../../externals/nvToolsExt/1/include )
include_directories( ../../externals/nvToolsExt/1/include/stdint )
include_directories( ../../Include/common )
include_directories( ../../Include/geometry )
include_directories( ../../Include/pvd )
include_directories( ../../Include/particles )
include_directories( ../../Include/cloth )
include_directories( ../../Include/physxvisualdebuggersdk )
include_directories( ../../Include/pxtask )
include_directories( ../../Include )
include_directories( ../Common/src )
include_directories( ../GeomUtils/headers )
include_directories( ../GeomUtils/src )
include_directories( ../GeomUtils/src/contact )
include_directories( ../GeomUtils/src/common )
include_directories( ../GeomUtils/src/convex )
include_directories( ../GeomUtils/src/distance )
include_directories( ../GeomUtils/src/sweep )
include_directories( ../GeomUtils/src/gjk )
include_directories( ../GeomUtils/src/intersection )
include_directories( ../GeomUtils/src/mesh )
include_directories( ../GeomUtils/src/hf )
include_directories( ../GeomUtils/src/pcm )
include_directories( ../LowLevel/API/include )
include_directories( ../PhysX/src )
include_directories( ../PhysX/src/buffering )
include_directories( ../PhysX/src/particles )
include_directories( ../PhysX/src/cloth )
include_directories( ../SimulationController/include )
include_directories( ../PhysXCooking/src )
include_directories( ../PhysXCooking/src/mesh )
include_directories( ../PhysXCooking/src/convex )
include_directories( ./../../SceneQuery )
include_directories( ../PvdRuntime/src )
include_directories( ../PhysXMetaData/core/include )

include_directories( ../../externals/nvToolsExt/1/include )
include_directories( ../../externals/nvToolsExt/1/include/stdint )
include_directories( ../../Include/foundation )
include_directories( ../foundation/include )
include_directories( ../../Include/physxprofilesdk )
include_directories( ../../Include/physxvisualdebuggersdk )
include_directories( ../../Include/common )
include_directories( ../../Include/geometry )
include_directories( ../../Include/pxtask )
include_directories( ../../Include )
include_directories( ../Common/src )
include_directories( ../Common/src/windows )
include_directories( ../PhysXProfile/src )
include_directories( ../PhysXProfile/include )
include_directories( ../GeomUtils/headers )
include_directories( ../GeomUtils/src/contact )
include_directories( ../GeomUtils/src/common )
include_directories( ../GeomUtils/src/convex )
include_directories( ../GeomUtils/src/distance )
include_directories( ../GeomUtils/src/gjk )
include_directories( ../GeomUtils/src/intersection )
include_directories( ../GeomUtils/src/mesh )
include_directories( ../GeomUtils/src/hf )
include_directories( ../GeomUtils/src/pcm )
include_directories( ../GeomUtils/src )
include_directories( ../LowLevel/API/include )
include_directories( ../LowLevel/common/include )
include_directories( ../LowLevel/common/include/collision )
include_directories( ../LowLevel/common/include/pipeline )
include_directories( ../LowLevel/common/include/pipeline/windows )
include_directories( ../LowLevel/common/include/math )
include_directories( ../LowLevel/common/include/utils )
include_directories( ../LowLevel/software/include )
include_directories( ../LowLevel/software/include/windows )

include_directories( ../../Include/foundation )
include_directories( ../foundation/include )
include_directories( ../../Include/physxprofilesdk )
include_directories( ../../Include/physxvisualdebuggersdk )
include_directories( ../../Include )
include_directories( ../../Include/pxtask )
include_directories( ../../Include/common )
include_directories( ../Common/src )
include_directories( ../LowLevelCloth/include )
include_directories( ../LowLevelCloth/src )

add_library(PhysX3LowLevelCloth ${HEADER_FILES} ${SOURCE_FILES})